2014-06-03  Wilco  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/math_private.h
	(libc_feholdexcept_aarch64) (libc_feholdexcept_setround_aarch64)
	(libc_fetestexcept_aarch64) (libc_fesetenv_aarch64)
	(libc_feupdateenv_test_aarch64) (libc_feholdsetround_aarch64)
	(libc_feresetround_aarch64) (libc_feholdsetround_aarch64_ctx):
	Fix declarations.

2014-06-03  Kostya Serebryany  <konstantin.s.serebryany@gmail.com>

	* crypt/crypt-private.h: Include ufc-crypt.h.
	(__b64_from_24bit): Declare extern.
	* crypt/crypt_util.c(__b64_from_24bit): New function.
	(b64t): New static const variable.
	* crypt/md5-crypt.c (b64_from_24bit): Remove function.
	(b64t): Remove variable.
	(__md5_crypt_r): Replace b64_from_24bit with __b64_from_24bit.
	* crypt/sha256-crypt.c: Include crypt-private.h.
	(b64t): Remove variable.
	(__sha256_crypt_r): Remove b64_from_24bit and replace
	with __b64_from_24bit.
	* crypt/sha512-crypt.c: Likewise.

2014-06-02  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/unix/sysv/linux/sh/vfork.S: Moved ...
	* sysdeps/unix/sysv/linux/sh/vfork.S: ... here.
	Label the code __libc_vfork rather than __vfork.
	[!NOT_IN_libc] (vfork): Define as weak alias.
	[!NOT_IN_libc] (__vfork): Define as strong alias, and libc_hidden_def.
	* sysdeps/unix/sysv/linux/sh/pt-vfork.S: New file.
	* nptl/sysdeps/unix/sysv/linux/sh/pt-vfork.S: File removed.

2014-06-02  Siddhesh Poyarekar  <siddhesh@redhat.com>

	* malloc/malloc.c (malloc_info): Fix format specifier for
	n_mmaps.

2014-06-02  Wilco  <wdijkstr@arm.com>

	* sysdeps/aarch64/fpu/fpu_control.h (_FPU_SETCW): Remove ISB after
	FPCR write.

2014-06-02  Wilco  <wdijkstr@arm.com>

	[BZ #17009]
	* sysdeps/aarch64/fpu/feupdateenv (feupdateenv):
	Rewrite to reduce FPCR/FPSR accesses.

2014-06-01  David S. Miller  <davem@davemloft.net>

	* sysdeps/sparc/fpu/libm-test-ulps: Update.

2014-05-31  David S. Miller  <davem@davemloft.net>

	* sysdeps/ieee754/flt-32/e_j1f.c (__ieee754_y1f): Force computations